fix the view of button "DOWNLOAD CATALOGUE" (paddings, margins, hover)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /BACK UP 29
+/index_rus.sublime-workspace
+/prepros-6.config
+/togas-media-couture3.sublime-project
+/togas-media-couture3.sublime-workspace
